--- a/app/views/reservations/_userating.html.erb
+++ b/app/views/reservations/_userating.html.erb
@@ -12,20 +12,20 @@
                             <%= form.label "user_rating_#{rating}" do %>
                             <%= raw("<i class='bi bi-star-fill'></i>" * rating) %>
                             <% end %>
-                        
+                        </li>
                     <% end %>
                 <% else %>
-                    <p>Vous avez déjà soumis une note pour cette réservation.</p>
+                    Vous avez déjà soumis une note pour cette réservation.
                 <% end %>
-
+                <li>
                 <% if reservation.user_comment.nil? %>
                     <%= form.label :user_comment, 'Commentaire pour l\'hôte' %>
                     <%= form.text_area :user_comment, rows: 5, cols: 40 %>
                 <% else %>
-                    <p>Vous avez déjà soumis un commentaire pour cette réservation.</p>
+                    Vous avez déjà soumis un commentaire pour cette réservation.
                 <% end %>
-                </li>
                 <%= form.submit 'Envoyer', class: 'btn btn-primary  btn-sm', disabled: reservation.user_rating.present? && reservation.user_comment.present? %>
+                </li>
             </ul>
         </div>
     <% end %>
