--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,43 +1,38 @@
-<nav class="navbar navbar-expand-sm navbar-dark bg-dark" aria-label="Third navbar example">
+<nav class="navbar navbar-expand-sm navbar-dark bg-dark">
   <div class="container-fluid">
-    <a class="navbar-brand" href="<%= root_path  %>">Keella</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample03" aria-controls="navbarsExample03" aria-expanded="true" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <div class="navbar-collapse collapse show" id="navbarsExample03" style="">
-      <ul class="navbar-nav me-auto mb-2 mb-sm-0">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+    <div class="navbar-collapse collapse justify-content-between align-items-center" id="navbarNav">
+      <a class="navbar-brand" href="<%= root_path %>">Keella</a>
+      <ul class="navbar-nav">
         <li class="nav-item">
+          <a class="nav-link" href="<%= workouts_path %>">Trouver une séance</a>
         </li>
       </ul>
-      <ul class="navbar-nav me-auto mb-2 mb-sm-0">
+      <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="<%= workouts_path  %>">Trouver une séance</a>
-        </li>
-      </ul>
-      <ul class="navbar-nav me-1 mb-2 mb-sm-0">
           <a href="<%= users_path %>">
-            <div class="w-100">
-              <% if user_signed_in? && current_user.avatar.attached? %>
-                <%= image_tag current_user.avatar, alt: '32x32', class:"mr-2 rounded mb-1 bg-dark", style:"width: 32px; height: 32px;" %>
-              <%else%>
-                <img alt="32x32" class="mr-2 rounded mb-1 bg-dark" style="width: 32px; height: 32px;" src="<%= image_path('iconeuser.png') %>" data-holder-rendered="true">
-              <%end%>
-            </div>
-          </a>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="dropdown03" data-bs-toggle="dropdown" aria-expanded="false">Menu</a>
-          <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdown03">
-            <% if user_signed_in? %> 
-            <li><%= link_to "Mes réservations", user_reservations_path(current_user), class: "dropdown-item" %></li>
-            <li><%= link_to "Proposer une séance", new_workout_path, class: "dropdown-item" %></li>
-            <li><%= link_to "Mon compte", users_path, class: "dropdown-item" %></li>
-            <li><%= button_to "Se deconnecter", destroy_user_session_path, method: :delete, data: {turbo: true, turbo_method: :delete, turbo_confirm: "Vous etes sure de vouloir vous déconnecter ?"}, class: "dropdown-item" %></li>
+            <% if user_signed_in? && current_user.avatar.attached? %>
+              <%= image_tag current_user.avatar, alt: '32x32', class: "rounded mb-1 bg-dark", style: "width: 32px; height: 32px;" %>
             <% else %>
-            <li><%= link_to "Se connecter", new_user_session_path, class: "dropdown-item" %></li>
-            <li><%= link_to "S'inscrire", new_user_registration_path, class: "dropdown-item" %></li>
+              <img alt="32x32" class="rounded mb-1 bg-dark" style="width: 32px; height: 32px;" src="<%= image_path('iconeuser.png') %>" data-holder-rendered="true">
             <% end %>
-          </ul>
+          </a>
+        </li>
+        <li class="nav-item dropdown">
+          <div class="nav-link dropdown-toggle" id="dropdown03" role="button" data-bs-toggle="dropdown" aria-expanded="false">Menu</div>
+          <div class="dropdown-menu dropdown-menu-end">
+            <% if user_signed_in? %> 
+              <%= link_to "Mes réservations", user_reservations_path(current_user), class: "dropdown-item" %>
+              <%= link_to "Proposer une séance", new_workout_path, class: "dropdown-item" %>
+              <%= link_to "Mon compte", users_path, class: "dropdown-item" %>
+              <%= button_to "Se déconnecter", destroy_user_session_path, method: :delete, data: {turbo: true, turbo_method: :delete, turbo_confirm: "Êtes-vous sûr de vouloir vous déconnecter ?"}, class: "dropdown-item" %>
+            <% else %>
+              <%= link_to "Se connecter", new_user_session_path, class: "dropdown-item" %>
+              <%= link_to "S'inscrire", new_user_registration_path, class: "dropdown-item" %>
+            <% end %>
+          </div>
         </li>
       </ul>
     </div>
