--- a/app/views/workouts/_workouts.html.erb
+++ b/app/views/workouts/_workouts.html.erb
@@ -55,14 +55,16 @@
                           </li>
                       </ul>
                     </div>
-
-                  <li class="list-group-item border-0">
-                      <div class="text-center" style="display: flex; justify-content: center; align-items: center; margin: auto;">
-                          <i class="bi bi-geo-alt"></i>
-                          <%= workout.city.name %>
-                      </div>
-                  </li>
-                  
+                    <div>
+                        <ul>
+                            <li class="list-group-item border-0">
+                                <div class="text-center" style="display: flex; justify-content: center; align-items: center; margin: auto;">
+                                    <i class="bi bi-geo-alt"></i>
+                                    <%= workout.city.name %>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
               </div>
           </div>
       </a>
