--- a/app/views/workouts/new.html.erb
+++ b/app/views/workouts/new.html.erb
@@ -7,7 +7,7 @@
     <h1 class="text-light">Propose ta séance</h1>
 </section>
 
-<div class="align-items-center">
+<section class="align-items-center">
     <div class="form container my-4 py-4 rounded-4 bg-tertiary rounded-4 shadow">
         <%= form_with(model: @workout, local: true) do |form| %>
         <%= form.hidden_field :host_id, value: current_user.id %>
@@ -42,4 +42,4 @@
         </div>
         <% end %>
     </div>
-</div>
+</section>
