--- a/app/views/workouts/show.html.erb
+++ b/app/views/workouts/show.html.erb
@@ -5,7 +5,7 @@
   <%= workout_jsonld(@workout) %>
 </script>
 </head>
-<div class="text-center py-5 bg-secondary">
+<section class="text-center py-5 bg-secondary">
   <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
       <% if @workout.images.attached? %>
@@ -38,7 +38,7 @@
       <span class="visually-hidden">Next</span>
     </button>
   </div>
-</div>
+</section>
 
 <div class="container">
   <section>
