--- a/app/views/reservations/index.html.erb
+++ b/app/views/reservations/index.html.erb
@@ -15,7 +15,7 @@
                 <%if reservation.workout.images.attached?%>
                     <%= image_tag reservation.workout.images[0], alt: "workout-image", class: "img-fluid" %>
                 <%else%>
-                    <%= image_tag 'logokeella.png', alt: "workout-image", class: "img-fluid" %>
+                    <%= image_tag 'logokeella.webp', alt: "workout-image", class: "img-fluid" %>
                 <%end%>
             </div>
             <div class="col-lg-8 col-md-12">
