--- a/app/views/workouts/show.html.erb
+++ b/app/views/workouts/show.html.erb
@@ -14,7 +14,7 @@
         </div>
       <% else %>
         <div class="carousel-item active">
-          <%= image_tag 'logokeella.png', alt: "workout-image", class: "d-block mx-auto img-fluid", style:"max-height: 500px; max-width: 100%;" %>
+          <%= image_tag 'logokeella.webp', alt: "workout-image", class: "d-block mx-auto img-fluid", style:"max-height: 500px; max-width: 100%;" %>
         </div>
       <% end %>
       <!-- Ajoutez ici les autres images du carrousel si nécessaire -->
