--- a/app/views/users/_hostrating.html.erb
+++ b/app/views/users/_hostrating.html.erb
@@ -1,4 +1,4 @@
-<div class="card rounded-4 bg-body-tertiary">
+<div class="card bg-body-tertiary">
     <div class="card-header ">
         <% if @user.reservations.blank? %>
             <h5>Pas de réservations pour le moment.</h5>
