--- a/app/views/users/_userating.html.erb
+++ b/app/views/users/_userating.html.erb
@@ -1,4 +1,4 @@
-<div class="card rounded-4 bg-body-tertiary">
+<div class="card bg-body-tertiary">
     <div class="card-header ">
     
         <% if @workouts.blank? %>
