--- a/app/views/users/_hostrating.html.erb
+++ b/app/views/users/_hostrating.html.erb
@@ -7,8 +7,8 @@
     </div>
     <% @user.reservations.order(created_at: :desc).each do |reservation| %>
             <% if reservation.host_rating || reservation.host_comment.present? %>
-                <div class="card rounded-4  bg-body-tertiary">
-                    <div class="card-body rounded-4  bg-body-tertiary">
+                <div class="card rounded-4 ">
+                    <div class="card-body ">
                         <p class="mb-0 "> 
                             Date de réservation le : <%= reservation.created_at.strftime("%d/%m/%Y") %><br>
                             Hôte :<%= link_to reservation.workout.host.pseudo, user_path(reservation.workout.host) %>
