--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -5,7 +5,7 @@
 </head>
 <div class="jumbotron text-center" style="background-image: url('<%= asset_path('jumbotron.jpg') %>'); background-size: cover; background-position: center; height: 70vh; color: white;">
   <h1>(Re)Découvrez vos talents sportifs</h1>
-  <h5 class="mb-4">Ici, vous pourrez louer ou mettre à disposition des équipements et des locaux sportifs partout en France</h5>
+  <h5 class="mb-4">Ici, vous pouvez louer ou mettre à disposition des équipements et des locaux sportifs partout en France</h5>
 </div>
 
 
@@ -27,7 +27,7 @@
 <div class="d-flex justify-content-center">
   <%= link_to "Voir toutes les locations", workouts_path, class: "btn btn-outline-secondary btn-lg m-0" %>
 </div>
-<h4 class="mt-5 text-center">Ici, vous pourrez louer des équipements et des locaux sportifs partout en France.</h4>
+<h4 class="mt-5 text-center">Ici, vous pouvez louer des équipements et des locaux sportifs partout en France.</h4>
 <div class="p-2 border-0 bd-example m-0 border-0 row row-cols-1 row-cols-md-2 g-4">
 
 <div class="container-fluid">
