--- a/app/views/workouts/show.html.erb
+++ b/app/views/workouts/show.html.erb
@@ -40,8 +40,7 @@
   </div>
 </section>
 
-<div class="container">
-  <section>
+<section class="container">
     <div class="row flex-column-reverse flex-md-row">
 
       <div class="col col-md-8 mt-2">
@@ -135,5 +134,6 @@
         </div>
       </div>
     </div>
-  </section>
-</div>
+</section>
+  <!--script to show the button to reserve a workout in workout show-->
+  <%= javascript_include_tag 'show_reservation_confirmation' %>
