little home fix

--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -29,7 +29,7 @@
   <h4 class="mt-5 text-center">Ici, vous pourrez louer des équipements et des locaux sportifs partout en France.</h4>
   <div class="container">
   <div class="row justify-content-center align-items-center">
-    <div class="col-md-4 order-md-2"> <!-- Colonne pour le texte -->
+    <div class="col-md-4 order-md-2">
       <p>
         Bonjour et bienvenue chez Keella ! Nous sommes votre plateforme de référence pour la location d'équipements sportifs entre particuliers. 
         Que vous soyez un passionné de sport à la recherche d'équipements ou un propriétaire désireux de rentabiliser vos articles sportifs, 
@@ -39,7 +39,7 @@
         de pratiquer le sport, en rendant l'accès aux équipements plus facile et plus économique que jamais !
       </p>
     </div>
-    <div class="col-md-8 order-md-1"> <!-- Colonne pour la photo -->
+    <div class="col-md-8 order-md-1">
       <%= image_tag "landing_page1.jpg", alt: "image de profile", class: "img-fluid w-100"  %>
     </div>
   </div>
