mails correct + some fix

--- a/app/views/host_mailer/reservation_cancelled.html.erb
+++ b/app/views/host_mailer/reservation_cancelled.html.erb
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
+    <title>Reservation annulée</title>
   </head>
   <body>
     <h1>Bonjour <%= @host.pseudo %>,</h1>
