--- a/app/views/user_mailer/evaluate_host.txt.erb
+++ b/app/views/user_mailer/evaluate_host.txt.erb
@@ -1,4 +1,6 @@
 Salut <%= @user.pseudo %> merci d'avoir confirmé la fin de la séance !
-    
+
+Nous avons procédé au paiement de l'host
+
 Sportivement,
 À très vite sur keella.fly.dev !
