--- a/app/views/user_mailer/payment_confirmation_email.html.erb
+++ b/app/views/user_mailer/payment_confirmation_email.html.erb
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
+    <title>Confirmation de paiement</title>
   </head>
   <body>
     <h1>Salut <%= @user.pseudo %>,</h1>
