--- a/app/views/user_mailer/refused_email.html.erb
+++ b/app/views/user_mailer/refused_email.html.erb
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
+    <title>Demande annulée</title>
   </head>
   <body>
     <h1>Salut <%= @user.pseudo %>,</h1>
@@ -10,10 +11,8 @@
     <p>Veuillez nous contacter en cas de probleme : <a href="#">Nous contacter</a></p>
 
     <h2>Vous souhaitez chercher une autre séance ?</h2>
-    <p>C'est par ici :</p>
-    <div>
-      <button><a href="<%= workouts_url %>">Aller à la page recherche</a></button>
-    </div>
+    <p>C'est par ici : <a href="<%= workouts_url %>">Aller à la page recherche</a></p>
+    
     <p>Vous pouvez également copier et coller ce lien dans la barre d'adresse de votre navigateur.</p>
     <p>Sportivement,</p>
     <p>À très vite sur keella.fly.dev !</p>
