--- a/app/views/host_mailer/reservation_request.html.erb
+++ b/app/views/host_mailer/reservation_request.html.erb
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
+    <title>Demande de reservation</title>
   </head>
   <body>
     <h1>Salut <%= @host.pseudo %> tu as reçu une demande de réservation !</h1>
