--- a/app/views/host_mailer/workout_cancelled.html.erb
+++ b/app/views/host_mailer/workout_cancelled.html.erb
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
+    <title>Annulation de la séance</title>
   </head>
   <body>
     <h1>Bonjour <%= @host.pseudo %>,</h1>
