--- a/app/views/user_mailer/accepted_email.html.erb
+++ b/app/views/user_mailer/accepted_email.html.erb
@@ -2,10 +2,11 @@
 <html>
   <head>
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
+    <title>Demande acceptée</title>
   </head>
   <body>
     <h1>Salut <%= @user.pseudo %>,</h1>
-    <h2>Bonne nouvelle, ta demande a été accepté !</h2>
+    <h2>Bonne nouvelle, ta demande a été acceptée !</h2>
     <p>Nombre de place confirmé : <%= @reservation.quantity %>, vous n'avez rien à faire.</p>
     <p>Etape suivante ?</p>
     <ol>
@@ -14,10 +15,7 @@
       <li>Voici le numéro de l'hote : <%= @host.phone %></li>
       <li>A la fin de votre séance, veuillez confirmer que vous avez assisté à votre séance afin de remercier l’hote en débloquant votre paiement.</li>
     </ol>
-    <p>Confirmer la fin de ma séance : </p>
-    <div>
-      <button class="btn btn-primary"><a href="<%= user_reservations_url(@user, @reservation) %>">Confirmer la fin de ma séance</a></button>
-    </div>
+    <p>Confirmer la fin de ma séance : <a href="<%= user_reservations_url(@user, @reservation) %>">Confirmer la fin de ma séance</a></p>
     <p>Vous pouvez également copier et coller ce lien dans la barre d'adresse de votre navigateur.</p>
     <p>Sportivement,</p>
     <p>À très vite sur keella.fly.dev !</p>
