--- a/app/views/user_mailer/evaluate_host.html.erb
+++ b/app/views/user_mailer/evaluate_host.html.erb
@@ -2,11 +2,11 @@
 <html>
   <head>
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
+    <title>Fin de séance</title>
   </head>
   <body>
     <h1>Salut <%= @user.pseudo %> merci d'avoir confirmé la fin de la séance !</h1>
-    <p>Nous avons procédé au paiement de l'host</p>
-    
+    <p>Nous avons procédé au paiement de l'host</p>    
     <p>Sportivement,</p>
     <p>À très vite sur keella.fly.dev !</p>
   </body>
