--- a/app/views/user_mailer/welcome_email.html.erb
+++ b/app/views/user_mailer/welcome_email.html.erb
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
+    <title>Bienvenue</title>
   </head>
   <body>
     <h1>Salut <%= @user.pseudo %> et bienvenue chez nous !</h1>
