--- a/app/views/user_mailer/workout_cancelled.html.erb
+++ b/app/views/user_mailer/workout_cancelled.html.erb
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
+    <title>Séance annulée</title>
   </head>
   <body>
     <h1>Bonjour <%= @user.pseudo %>,</h1>
