--- a/app/views/users/_userating.html.erb
+++ b/app/views/users/_userating.html.erb
@@ -2,7 +2,7 @@
     <div class="card-header ">
     
         <% if @workouts.blank? %>
-            <h5>Tu n'as pas encore crée de séances donc pas de review</h5>
+            <h5>Tu n'as pas encore crée de séances.</h5>
         <% else %>
             <h5>Voici les retours de tes invités :</h5>
     </div>
