--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,66 +2,69 @@
 <% content_for :title, "Profil" %>
 <% content_for :meta_description, "Retrouvez les informations partagées par l'utilisateur" %>
 
-
-<section class="row">
-    <div class=" border-0 bd-example row row-cols-1 row-cols-md-2 g-4">
-        <div class="col "> 
-            <div class="card ms-auto text-center me-auto rounded-4 shadow bg-body-tertiary" style="max-width: 22rem;">
-                <h3>Avatar actuel</h3>
-                    <%if @user.avatar.attached?%>
-                        <%= image_tag @user.avatar, alt: 'avatar' %>
-                    <%else%>
-                        <%=  image_tag "iconeuser.png", alt: "image de profile" %>
-                        <p>Il n'y a pas encore d'avatar lié à cet utilisateur</p>
-                    <%end%>
-                    <%if @user == current_user%>
-                        <%= form_tag user_avatars_path(@user), multipart: true do %>
-                            <%= file_field_tag :avatar, class:"btn btn-outline-success btn-sm" %>
-                            <%= submit_tag "uploader l'avatar",class:"btn btn-outline-success btn-sm" %>
+<section class ="container">
+    <div class="row">
+        <div class="border-0 bd-example row row-cols-1 row-cols-md-2 g-4">
+            <div class="col"> 
+                <div class="card ms-auto text-center me-auto rounded-4 shadow bg-body-tertiary" style="max-width: 22rem;">
+                    <h3>Avatar actuel</h3>
+                        <%if @user.avatar.attached?%>
+                            <%= image_tag @user.avatar, alt: 'avatar' %>
+                        <%else%>
+                            <%=  image_tag "iconeuser.png", alt: "image de profile" %>
+                            <p>Il n'y a pas encore d'avatar lié à cet utilisateur</p>
+                        <%end%>
+                        <%if @user == current_user%>
+                            <%= form_tag user_avatars_path(@user), multipart: true do %>
+                                <%= file_field_tag :avatar, class:"btn btn-outline-success btn-sm" %>
+                                <%= submit_tag "uploader l'avatar",class:"btn btn-outline-success btn-sm" %>
+                            <% end %>
                         <% end %>
-                    <% end %>
-                    <br>
-            </div>
-        
-            
-            <div class="card ms-auto me-auto rounded-4 shadow bg-body-tertiary" style="max-width: 22rem;">
-                <div class="card-body">
-                        <p class="ms-3 mt-2">Nombre de séances proposé: <%= @user.hosted_workouts.count %> </p>
-                        <p class="ms-3 mt-2">Nombre de réservations: <%= @user.reserved_workouts.count %> </p>
-
-                    <% if @average_host_rating.nil? %>
-                        <p class="ms-3 mt-2">Pas encore de notes</p>
-                    <% else %>
-                        <p class="ms-3 mt-2">Note en tant que participant: <%= @average_host_rating.round(1) %>⭐️ </p>
-                    <% end %>
-            
-                    <% if @average_user_rating.nil? %>
-                        <p class="ms-3 mt-2">Pas encore de notes</p>
-                    <% else %>
-                        <p class="ms-3 mt-2">Note en tant qu'hôte: <%= @average_user_rating.round(1) %>⭐️</p>
-                    <% end %>
+                        <br>
                 </div>
-            </div>
-        </div>
-    
+            
+                
+                <div class="card ms-auto me-auto rounded-4 shadow bg-body-tertiary" style="max-width: 22rem;">
+                    <div class="card-body">
+                            <p class="ms-3 mt-2">Nombre de séances proposé: <%= @user.hosted_workouts.count %> </p>
+                            <p class="ms-3 mt-2">Nombre de réservations: <%= @user.reserved_workouts.count %> </p>
 
-
-    <div class="col">
-        <div class="card me-auto rounded-4 shadow bg-body-tertiary">
-            <br>
-            <h1 class="card-title" style="text-align: center;">Profil de <%= @user.pseudo %></h1>
-                <div class="card-body rounded-4 shadow bg-body-tertiary">
-                    <% if current_user == @user %>
-                        <%= link_to "Modifier le profil", edit_user_registration_path, class: "btn btn-outline-primary" %>
-                        <%= link_to "Supprimer le profile", registration_path(@user), :method => :delete, class: "btn btn-outline-danger", id: "delete_comment_button", data: {turbo: true, turbo_method: :delete, turbo_confirm: "Vous etes sure de vouloir supprimer votre compte ?"} %>
-                    <% end %>
-                    <div class="card-footer mt-2 ">
-                        <h5 class="card-title">Pseudo: <%= @user.pseudo %></h5>
-                        <p class="card-text">Ville : <%= @user.city.name %></p>
-                        <%= render 'userating' %>
-                        <%= render 'hostrating' %>
+                        <% if @average_host_rating.nil? %>
+                            <p class="ms-3 mt-2">Pas encore de notes</p>
+                        <% else %>
+                            <p class="ms-3 mt-2">Note en tant que participant: <%= @average_host_rating.round(1) %>⭐️ </p>
+                        <% end %>
+                
+                        <% if @average_user_rating.nil? %>
+                            <p class="ms-3 mt-2">Pas encore de notes</p>
+                        <% else %>
+                            <p class="ms-3 mt-2">Note en tant qu'hôte: <%= @average_user_rating.round(1) %>⭐️</p>
+                        <% end %>
                     </div>
                 </div>
+            </div>
+        
+
+
+        <div class="col">
+            <div class="card me-auto rounded-4 shadow bg-body-tertiary">
+                <br>
+                <h1 class="card-title" style="text-align: center;">Profil de <%= @user.pseudo %></h1>
+                    <div class="card-body rounded-4 shadow bg-body-tertiary">
+                        <% if current_user == @user %>
+                            <%= link_to "Modifier le profil", edit_user_registration_path, class: "btn btn-outline-primary" %>
+                            <%= link_to "Supprimer le profile", registration_path(@user), :method => :delete, class: "btn btn-outline-danger", id: "delete_comment_button", data: {turbo: true, turbo_method: :delete, turbo_confirm: "Vous etes sure de vouloir supprimer votre compte ?"} %>
+                        <% end %>
+                        <div class="card-footer mt-2 ">
+                            <h5 class="card-title">Pseudo: <%= @user.pseudo %></h5>
+                            <% if @user.city %>
+                                <p class="card-text">Ville : <%= @user.city.name %></p>
+                            <% end %>
+                            <%= render 'userating' %>
+                            <%= render 'hostrating' %>
+                        </div>
+                    </div>
+            </div>
         </div>
     </div>
 </section>
